--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">Samsung Galaxy S24 Ultra Review: Why Buy Anything Else?</p>
-                    <p class="author">Marques Brownlee &check;</p>
+                    <p class="author">Marques Brownlee <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">8.9M views &middot; 5 months ago</p>
                 </div>
                 <div class="specs-icon">
@@ -101,7 +101,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">Git and GitHub for Beginners - Crash Course</p>
-                    <p class="author">freeCodeCamp.org &check;</p>
+                    <p class="author">freeCodeCamp.org <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">4.1M views &middot; 4 years ago</p>
                 </div>
                 <div class="specs-icon">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">iPhone 15 Pro Storage Expansion | 128GB To 1TB</p>
-                    <p class="author">KingSener &check;</p>
+                    <p class="author">KingSener <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">2.6M views &middot; 2 months ago</p>
                 </div>
                 <div class="specs-icon">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">How I Would Learn Cyber Security If I Could Start Over in 2024 (6 Month Plan)</p>
-                    <p class="author">UnixGuy | Cyber Security &check;</p>
+                    <p class="author">UnixGuy | Cyber Security <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">158K views &middot; 4 weeks ago</p>
                 </div>
                 <div class="specs-icon">
@@ -164,7 +164,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">What is Proof of Work? (Cryptocurrency Explanation)</p>
-                    <p class="author">Whiteboard Crypto &check;</p>
+                    <p class="author">Whiteboard Crypto <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">237K views &middot; 3 years ago</p>
                 </div>
                 <div class="specs-icon">
@@ -185,7 +185,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">you need to learn Virtual Machines RIGHT NOW!! (Kali Linux VM, Ubuntu, Windows)</p>
-                    <p class="author">NetworkChuck &check;</p>
+                    <p class="author">NetworkChuck <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">9.1M views &middot; 3 years ago</p>
                 </div>
                 <div class="specs-icon">
@@ -206,7 +206,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">Egg Drop From Space</p>
-                    <p class="author">Mark Rober &check;</p>
+                    <p class="author">Mark Rober <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">105M views &middot; 1 year ago</p>
                 </div>
                 <div class="specs-icon">
@@ -227,7 +227,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">This is the WORST Monitor Ever...ON PURPOSE! - Dasung PaperlikeU E-Ink Monitor</p>
-                    <p class="author">Linus Tech Tips &check;</p>
+                    <p class="author">Linus Tech Tips <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">2.1M views &middot; 10 months ago</p>
                 </div>
                 <div class="specs-icon">
@@ -248,7 +248,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">50 YouTubers Fight For $1,000,000</p>
-                    <p class="author">MrBeast &check;</p>
+                    <p class="author">MrBeast <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">59M views &middot; 1 day ago</p>
                 </div>
                 <div class="specs-icon">
@@ -269,7 +269,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">How to PERFECTLY Maintain your First Car</p>
-                    <p class="author">ChrisFix &check;</p>
+                    <p class="author">ChrisFix <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">4.1M views &middot; 4 months ago</p>
                 </div>
                 <div class="specs-icon">
@@ -290,7 +290,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">Nothing Phone (2a ) Unboxing & Quick Review || in Telugu||</p>
-                    <p class="author">Prasadtechintelugu &check;</p>
+                    <p class="author">Prasadtechintelugu <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">657K views &middot; 4 months ago</p>
                 </div>
                 <div class="specs-icon">
@@ -311,7 +311,7 @@
                 </div>
                 <div class="video-info">
                     <p class="title">Relaxing SOLO Camping with Rain Forest Mountain views [ gloomy weather, cosy shelter, rain ASMR ]</p>
-                    <p class="author">Go4x4 &check;</p>
+                    <p class="author">Go4x4 <img src="Icons/verification" class="verification-img"></p>
                     <p class="stats">10M views &middot; 1 year ago</p>
                 </div>
                 <div class="specs-icon">
