youtube.com clone

--- a/index.html
+++ b/index.html
@@ -320,5 +320,12 @@
             </div>
         </div>
     </div>
+    <div class="me">
+        <p>Created by Narasimha Tammineni</p>
+        <div>
+            <a href="https://linkedin.com/in/narasimha-tammineni">Linkedin</a>
+            <a href="https://github.com/NarasimhaTammineni">GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
